--- a/ch_9/函数.md
+++ b/ch_9/函数.md
@@ -434,3 +434,136 @@ void to_binary(unsigned long n)   /* recursive function */
 
 ## 9.4 编译多源代码文件的程序
 
+> 对于多文件程序，要使用相应的菜单命令，把源代码文件 加入一个项目中，要确保所有源代码文件都在项目列表中列出
+
+### 9.4.5 使用头文件
+
+把main（）函数放在第一个文件中，把函数定义放在第二个文件中，那么第一个文件仍要使用函数原型，把函数原型放在头文件中，就不要每次使用函数时都要写函数原型。
+
+#include "hotels.h"指令的双引号表明包含的文件在当前目录中。
+
+## 9.5 查找地址：&运算符
+
+> 指针（pointer）是C语言最重要的（也是最复杂）的概念之一。
+>
+> 一元&运算符给出变量的存储地址。如果pooh是变量。那么&pooh是变量的地址
+
+```c
+#include <stdio.h>
+#include <stdlib.h>
+void mikado(int);                      /* declare function  */
+int main(void)
+{
+    int pooh = 2, bah = 5;             /* local to main()   */
+    
+    printf("In main(), pooh = %d and &pooh = %p\n",
+           pooh, &pooh);
+    printf("In main(), bah = %d and &bah = %p\n",
+           bah, &bah);//%p以16进制显示地址
+    mikado(pooh);
+    system("pause");
+    return 0;
+}
+
+void mikado(int bah)                   /* define function   */
+{
+    int pooh = 10;                     /* local to mikado() */
+    
+    printf("In mikado(), pooh = %d and &pooh = %p\n",
+           pooh, &pooh);
+    printf("In mikado(), bah = %d and &bah = %p\n",
+           bah, &bah);
+}
+```
+
+![image-20220610090341614](https://gitee.com/wiwhh/pic_up/raw/master/image-20220610090341614.png)
+
+**函数调用把实际参数传递给形式参数，这种传递只传递了值，每个c函数都有自己的变量**
+
+## 9.6 更改主调函数中的变量
+
+```c
+#include <stdlib.h>
+#include <stdio.h>
+void interchange(int u, int v); /* declare function */
+
+int main(void)
+{
+    int x = 5, y = 10;
+    
+    printf("Originally x = %d and y = %d.\n", x , y);
+    interchange(x, y);
+    printf("Now x = %d and y = %d.\n", x, y);
+    system("pause");
+    return 0;
+}
+
+void interchange(int u, int v)  /* define function  */
+{
+    int temp;
+    
+    temp = u;
+    u = v;
+    v = temp;
+}
+```
+
+![image-20220610091231121](https://gitee.com/wiwhh/pic_up/raw/master/image-20220610091231121.png)
+
+两个值并未改变，要使用指针。
+
+## 9.7 指针简介
+
+> 指针是一个值为内存地址的变量
+
+### 9.7.1 间接运算符：*
+
+> 间接运算符用来找出存储在指针地址中的值，有时也称为解引用运算符
+
+```c
+ptr = &bah;//指向地址
+val = *ptr;//取出ptr指向的值
+val = bah;// 相当于这个等式
+   
+```
+
+
+
+### 9.7.2 声明指针
+
+> 声明指针变量时必须指定指针指向变量的类型，因为不同的变量类型占用不同的存储空间，一些指针操作要求知道对象的大小。另外，程序必须知道存储在指定地址上的数据类型。
+>
+> 类型说明符表明了指针所指向的对象的类型，星号表明声明的对象是一个指针。
+
+### 9.7.2 使用指针在函数间通信
+
+```c
+#include <stdlib.h>
+#include <stdio.h>
+void interchange(int *, int *); /* declare function */
+
+int main(void)
+{
+    int x = 5, y = 10;
+    
+    printf("Originally x = %d and y = %d.\n", x , y);
+    interchange(&x, &y);
+    printf("Now x = %d and y = %d.\n", x, y);
+    system("pause");
+    return 0;
+}
+
+void interchange(int * u, int * v)  /* define function  */
+{
+    int temp;
+    
+    temp = *u;
+    *u = *v;
+    *v = temp;
+}
+```
+
+![image-20220610093235972](https://gitee.com/wiwhh/pic_up/raw/master/image-20220610093235972.png)
+
+如果要在被调函数中改变主调函数中的值，就必须使用指针
+
